--- a/.gitignore
+++ b/.gitignore
@@ -152,7 +152,8 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/linux,macos,python
 
-
-
 # exlude credentials.json
 credentials.json
+
+# exclude chromedriver
+chromedriver
