- rework json structure to easier support multi-user handling - script now to run every 30 minutes - script will execute bookings if time difference is < 15 minutes - pull out generic course booking logic to reduce code duplication - add floorball for testing

--- a/.gitignore
+++ b/.gitignore
@@ -152,8 +152,8 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/linux,macos,python
 
-# exlude credentials.json
-credentials.json
+# exlude bookings.json
+bookings.json
 
 # exclude chromedriver
 chromedriver
